[package]
name = "awedio"
version = "0.3.2"
edition = "2021"
authors = ["Ben Hansen <bh@benhansen.io>"]
description = "A low-overhead and adaptable audio playback library"
license = "MIT OR Apache-2.0"
keywords = ["audio", "playback"]
categories = ["multimedia::audio", "embedded"]
repository = "https://github.com/10buttons/awedio"

[features]
default = ["cpal", "async", "symphonia-all", "qoa"]
async = ["dep:tokio"]
cpal = ["dep:cpal"]

rmp3-mp3 = ["dep:rmp3"]
qoa = ["dep:qoaudio"]
hound-wav = ["dep:hound"]

symphonia-all = ["symphonia", "symphonia/all"]
symphonia-isomp4 = ["symphonia", "symphonia/isomp4"]
symphonia-mkv = ["symphonia", "symphonia/mkv"]
symphonia-ogg = ["symphonia", "symphonia/ogg"]
symphonia-wav = ["symphonia", "symphonia/wav"]
symphonia-aac = ["symphonia", "symphonia/aac"]
symphonia-adpcm = ["symphonia", "symphonia/adpcm"]
symphonia-alac = ["symphonia", "symphonia/alac"]
symphonia-flac = ["symphonia", "symphonia/flac"]
symphonia-mpa = ["symphonia", "symphonia/mpa"]
symphonia-mp1 = ["symphonia", "symphonia/mp1"]
symphonia-mp2 = ["symphonia", "symphonia/mp2"]
symphonia-mp3 = ["symphonia", "symphonia/mp3"]
symphonia-pcm = ["symphonia", "symphonia/pcm"]
symphonia-vorbis = ["symphonia", "symphonia/vorbis"]

[dependencies]
tokio = { version = "1.26.0", features = ["sync"], optional = true }
hound = { version = "3.5.0", optional = true }
rmp3 = { version = "0.3.1", features = ["std"], optional = true }
cpal = { version = "0.15", optional = true }
qoaudio = { version = "0.7", optional = true }
symphonia = { version = "0.5.3", optional = true, default-features = false }
log = "0.4.20"


[[example]]
name = "play"
required-features = ["cpal"]
